force-app/main/default/objects/PGi_ServiceCatalog_Hidden_Input_Value__c/PGi_ServiceCatalog_Hidden_Input_Value__c.object-meta.xml
<CustomObject>
    <label>Hidden Input Value</label>
    <nameField>
        <displayFormat>H-{00000}</displayFormat>
        <label>Hidden Input Value Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hidden Input Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>