force-app/main/default/objects/PGi_ServiceCatalog_Hidden_Input_Value__c/fields/Category_Option__c.field-meta.xml
<CustomField>
    <fullName>Category_Option__c</fullName>
    <label>Category Option</label>
    <referenceTo>PGi_ServiceCatalog_Category_Option__c</referenceTo>
    <relationshipLabel>Hidden Input Values</relationshipLabel>
    <relationshipName>Hidden_Input_Values</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>