force-app/main/default/objects/PGi_ServiceCatalog_Hidden_Input_Value__c/fields/Set_Value__c.field-meta.xml
<CustomField>
    <fullName>Set_Value__c</fullName>
    <description>What do you want to set the selected API name to?</description>
    <inlineHelpText>What do you want to set the selected API name to?</inlineHelpText>
    <label>Set Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>